the fixed size container of the week is too small

--- a/client/src/components/LifeBoard/LifeBoardLeft/subComponents/Week.module.css
+++ b/client/src/components/LifeBoard/LifeBoardLeft/subComponents/Week.module.css
@@ -67,8 +67,8 @@
 
 .weekContainer {
     position: relative;
-    height: 17px;
-    width: 17px;
+    height: 18.5px;
+    width: 18.5px;
     /* display: flex;
     align-items: center;
     justify-content: center; */
